--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.0'
-group = 'com.github.crembluray.grogu' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.github.jacksonhoggard.grogu' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'grogu'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
